# rdf-zkp

./: .gitignore  .gitmodules  Cargo.toml  README.md
benches/: README.md  model-theory.rs  schema.rs
data/: README.md  issuer.trig  issuer_schema.trig  prover.trig  prover_schema.trig
src/: lib.rs
src/poc/: issuer.rs  issuer_schema.rs  mod.rs  prover.rs  prover_schema.rs  verifier.rs  verifier_schema.rs
src/rdf4zkp/: encoder.rs  mod.rs  quads_list.rs
src/zkp4rdf/: accumulator.rs  mod.rs  presentation.rs  proof.rs  signature.rs
vocab/: README.md  zkp-o-bbs.ttl  zkp-o-lg16.ttl  zkp-o-spok.ttl  zkp-o-uacc.ttl  zkp-o.ttl
